--- a/package.json
+++ b/package.json
@@ -5,14 +5,27 @@
   "main": "dist/main.cjs",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Joshua Jebadurai",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^40.4.1",
-    "typescript": "^5.7.3",
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
     "@types/electron": "^1.6.10",
-    "@types/node": "^22.13.4"
+    "@types/node": "^22.13.4",
+    "electron": "^40.4.1",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1"
   }
 }
