--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wekitsu-desktop",
   "version": "0.0.1",
   "description": "wekitsu desktop is an electron wrapper for the web application wekitsu",
+  "repository": "gitink-studio/wekitsu-desktop",
   "main": "dist/main.cjs",
   "scripts": {
     "build": "tsc",
@@ -26,6 +27,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "update-electron-app": "^3.1.2"
   }
 }
