--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wekitsu-desktop",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "wekitsu desktop is an electron wrapper for the web application wekitsu",
   "repository": "gitink-studio/wekitsu-desktop",
   "main": "dist/main.cjs",
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "author": "Joshua Jebadurai",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "@electron-forge/maker-zip": "^7.11.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
     "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron-forge/publisher-github": "^7.11.1",
     "@electron/fuses": "^1.8.0",
     "@types/electron": "^1.6.10",
     "@types/node": "^22.13.4",
