--- a/package.json
+++ b/package.json
@@ -7,30 +7,45 @@
   "main": "dist/main.cjs",
   "scripts": {
     "build": "tsc",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "start": "electron .",
+    "dist": "npm run build && electron-builder",
+    "publish": "npm run build && electron-builder --publish always"
+  },
+  "build": {
+    "appId": "com.gitink.wekitsu",
+    "productName": "Wekitsu Desktop",
+    "files": [
+      "dist/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Wekitsu Desktop"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "gitink-studio",
+      "repo": "wekitsu-desktop"
+    }
   },
   "author": "Joshua Jebadurai",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.11.1",
-    "@electron-forge/maker-deb": "^7.11.1",
-    "@electron-forge/maker-rpm": "^7.11.1",
-    "@electron-forge/maker-squirrel": "^7.11.1",
-    "@electron-forge/maker-zip": "^7.11.1",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
-    "@electron-forge/plugin-fuses": "^7.11.1",
-    "@electron-forge/publisher-github": "^7.11.1",
-    "@electron/fuses": "^1.8.0",
     "@types/electron": "^1.6.10",
     "@types/node": "^22.13.4",
+    "dotenv-cli": "^11.0.0",
     "electron": "^40.4.1",
+    "electron-builder": "^26.7.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1",
-    "update-electron-app": "^3.1.2"
+    "electron-updater": "^6.7.3"
   }
 }
