--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "Joshua Jebadurai",
   "license": "ISC",
   "devDependencies": {
+    "@types/extract-zip": "^2.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.13.4",
     "dotenv-cli": "^11.0.0",
@@ -49,6 +50,7 @@
   "dependencies": {
     "dotenv": "^17.3.1",
     "electron-store": "^11.0.2",
-    "electron-updater": "^6.7.3"
+    "electron-updater": "^6.7.3",
+    "extract-zip": "^2.0.1"
   }
 }
