--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   "author": "Joshua Jebadurai",
   "license": "ISC",
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/extract-zip": "^2.0.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.13.4",
     "dotenv-cli": "^11.0.0",
@@ -48,9 +50,12 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "dotenv": "^17.3.1",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
-    "extract-zip": "^2.0.1"
+    "extract-zip": "^2.0.1",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
