Added cool icons

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "productName": "Wekitsu Desktop",
     "files": [
       "dist/**/*",
-      "package.json"
+      "package.json",
+      "icon.png"
     ],
     "win": {
       "target": "nsis",
